styles.css
@import url('https://fonts.googleapis.com/css2?family=Chocolate+Classical+Sans&display=swap');

:root {
    --cell-size: 21px;
    --bordered-cell-size: calc(var(--cell-size) + 1px);

    --accent: #7c67f6;

    --bg: #edecf0;
    --gentle: #13111d44;
    --text: #13111d;
}

* {
    box-sizing: border-box;
    margin: 0;
    user-select: none;
    transform-origin: center center;
    font-family: "Chocolate Classical Sans", sans-serif;
}

body {
    width: 100dvw;
    height: 100dvh;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: large;
    line-height: var(--cell-size);
    background: var(--bg);
    color: var(--text);
}

#app {
    height: 100dvh;
    width: min(100dvw, 500px);
    box-shadow: 0 0 4px #00000044;
}

#calendar {
    width: 100%;
    height: 65%;
    overflow: auto;
    display: grid;
    grid-template-rows: auto auto;
    grid-template-columns: auto auto;
}

#dates, #times, #corner {
    z-index: 5;
    background: var(--bg);
}

#corner {
    position: sticky;
    top: 0;
    left: 0;
    z-index: 9;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    cursor: pointer;
}

#yearslot {
    font-size: x-large;
    font-weight: bold;
}

#corner-icons {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: small;
}

#corner-icons svg {
    width: 2ch;
}

#dates {
    position: sticky;
    left: 0;
}

#times {
    position: sticky;
    top: 0;
    display: grid;
    grid-template-columns: calc(var(--bordered-cell-size) / 2) repeat(47, calc(var(--bordered-cell-size))) calc(var(--bordered-cell-size) / 2);
}

#grid {
    background: var(--bg);
    height: calc(var(--bordered-cell-size) * 365);
    overflow: hidden;
    position: relative;
}

#times div, #dates div{
    border: 1px solid var(--gentle);
}

#dates div, #times div {
    white-space: nowrap;
    text-align: right;
    padding: 0;
}

#times div {
    writing-mode: vertical-rl;
    text-orientation: mixed;
    border-top-width: 0;
    padding: 0.5ch 0;
    border-right-color: transparent;
    border-left-width: 0;
    border-right-width: 0;
}

#times div:first-child {
    border-left-width: 0;
    width: calc(var(--bordered-cell-size) / 2);
    overflow: hidden;
}

#times div:last-child {
    width: calc(var(--bordered-cell-size) / 2);
    overflow: hidden;
    display: flex;
    justify-content: end;
    align-items: end;
}

#times div:nth-child(even) {
    color: var(--gentle);
}

#corner {
    border: 1px solid var(--gentle);
    border-top-width: 0;
    border-left-width: 0;
}

#dates div {
    height: var(--bordered-cell-size);
    border-top-width: 0;
    border-left-width: 0;
    padding: 0 0.5ch;
}

#dates div:last-child {
    border-bottom-width: 0;
}

#canvas {
    width: 100%;
    height: 100%;
}

#selection {
    border-width: 2px;
    border-style: solid;
    animation: pulse 1s linear infinite;
    width: var(--bordered-cell-size);
    height: var(--bordered-cell-size);
    position: absolute;
    z-index: 4;
}

@keyframes pulse {
    0% {border-color: #27273250}
    50% {border-color: #27273220}
    100% {border-color: #27273250}
}

#modal-wrapper {
    position: fixed;
    top: 0;
    left: 0;
    height: 100dvh;
    width: 100dvw;
    background: var(--gentle);
    display: none;
    align-items: center;
    justify-content: center;
    z-index: 100;
}

#modal {
    max-height: 90dvh;
    width: calc(min(100dvw, 500px) - 10dvh);
    background: var(--bg);
    padding: 3ch;
    border-radius: 3ch;
}

.tabset {
    width: 100%;
    overflow: auto;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    /*background: #00000022;*/
    border-top-right-radius: 0.5ch;
    border-top-left-radius: 0.5ch;
}

.tabhead {
    padding: 0.5ch 1ch;
    white-space: nowrap;
    border-bottom: 1px solid var(--gentle);
    text-align: center;
}

#modal.settings .tabhead.settings, #modal.colors .tabhead.colors, #modal.what .tabhead.what {
    border: 1px solid var(--gentle);
    border-top-right-radius: 0.5ch;
    border-top-left-radius: 0.5ch;
    border-bottom-width: 0;
    background: var(--bg);
}

.tab {
    display: none;
    flex-direction: column;
    gap: 1ch;
    margin-top: 1ch;
}

#modal.settings .tab.settings, #modal.colors .tab.colors, #modal.what .tab.what {
    display: flex
}

a {
    color: var(--accent);
}

.center {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 1ch;
}

.button {
    background: var(--accent);
    padding: 0.5ch;
    border-radius: 0.5ch;
    color: var(--bg);
    text-align: center;
    cursor: pointer;
}

.button:active {
    transform: translateY(1px);
}

#palette {
    width: 100%;
    height: 35%;
    border-top: 1px solid var(--gentle);
}

.panel {
    display: none;
    width: 100%;
    height: 100%;
    padding: 1ch;
    gap: 1ch;
    flex-direction: column;
    flex-wrap: wrap;
}

.panel .button {
    min-height: calc((100% - 2ch) / 3);
    min-width: calc((100% - 2ch) / 3);
    flex-grow: 1;
    flex-shrink: 0;
}

#palette.panel-home #panel-home {display: flex;}
#palette.panel-0 #panel-0 {display: flex;}
#palette.panel-1 #panel-1 {display: flex;}
#palette.panel-2 #panel-2 {display: flex;}
#palette.panel-3 #panel-3 {display: flex;}
#palette.panel-4 #panel-4 {display: flex;}
#palette.panel-5 #panel-5 {display: flex;}
#palette.panel-6 #panel-6 {display: flex;}
#palette.panel-7 #panel-7 {display: flex;}
#palette.panel-8 #panel-8 {display: flex;}
#palette.panel-9 #panel-9 {display: flex;}
#palette.panel-10 #panel-10 {display: flex;}
#palette.panel-11 #panel-11 {display: flex;}

